--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background: rgb(181,136,247);
+  background: linear-gradient(216deg, rgba(181,136,247,1) 35%, rgba(29,229,226,1) 100%);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -26,8 +27,9 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
-  min-width: 320px;
+  align-items: center;
+  justify-content: center;
+  /* padding: 250px 30px; */
   min-height: 100vh;
 }
 
